Creacion de meto Ingresar Usuario y ancriptacion de password

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".RegistroCargoActivity" />
+        <activity android:name=".RegistroUsuariosActivity" />
     </application>
 
 </manifest>
