--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,8 +19,13 @@
         </activity>
         <activity android:name=".RegistroCargoActivity" />
         <activity android:name=".RegistroUsuariosActivity" />
-        <activity android:name=".RegistroProductoActivity" android:screenOrientation="portrait"></activity>
-        <activity android:name=".ListarProductos" android:screenOrientation="portrait"></activity>
+        <activity android:name=".ActualizarDatos"/>
+        <activity
+            android:name=".RegistroProductoActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ListarProductos"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
