Adición de layout de actualizacion de productos al manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,9 @@
         <activity
             android:name=".ListarProductos"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ActualizarProductos"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
