--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         <activity android:name=".RegistroUsuariosActivity" />
         <activity android:name=".ActualizarDatos"/>
         <activity android:name=".scaner.ScannerProducto"/>
+        <activity android:name=".RegistroPais"/>
+        <activity android:name=".ActualizarPais"/>
         <activity android:name=".correo.MainActivityMail"/>
         <activity
             android:name=".RegistroProductoActivity"
